<resources>
    <string name="app_name">Development Words</string>
    <string name="wordText">단어장</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cs_study">CS 학습</string>
    <string name="cs_words">CS 단어장</string>
    <string name="header_text">오늘도 열심히 \n코딩 공부를 해봐요!</string>
    <string name="today_study_word_text">오늘 학습한 단어 %d개</string>
    <string name="goal_learning_text">목표 학습량</string>
    <string name="rocket">rocket</string>
    <string name="progressbar_text">0/5</string>
    <string name="english_words">영어 단어장</string>
    <string name="english_study">영어 학습</string>
    <string name="home">home</string>
    <string name="home_text">홈</string>
    <string name="words">단어장</string>
    <string name="setting_text">설정</string>
    <string name="setting">setting</string>
    <string name="study_text">학습</string>
    <string name="study">study</string>
    <string name="words_icon">words</string>
    <string name="statText">로딩중…</string>
    <string name="statText1">유저님의 스테이터스는\nCS Lv.%s / 영어 Lv.%s 입니다</string>
    <string name="list_item_text2">탭하여 설명보기</string>
    <string name="list_item_text3">탭하여 설명닫기</string>
    <string name="shortcut">바로가기</string>
    <string name="cs_word_lv">CS 단어장 Lv.%s</string>
    <string name="english_word_lv">영어 단어장 Lv.%s</string>
    <string name="good">Good 👍</string>
    <string name="bad">Cheer up 💪</string>
    <string name="touch1">터치하여 뜻 확인</string>
    <string name="result_text1">암기완료</string>
    <string name="result_text2">미암기</string>
    <string name="result_text3">단어 암기율</string>
    <string name="result_text4">%s/15</string>
    <string name="result_text5">%s/15</string>
    <string name="level_up">level up</string>
    <string name="levelUp">Level Up</string>
    <string name="fail">Fail</string>
    <string name="quizExit">퀴즈 종료</string>
</resources>