<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".study.ResultActivity"
    android:background="@color/backgroundColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="20dp"
            android:layout_margin="30dp"
            android:layout_weight="8"
            android:layout_width="match_parent"
            android:layout_height="0dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieAnimationView"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:layout_gravity="center|top"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="spaceman.json"
                    app:lottie_loop="true"
                    app:lottie_url="@raw/spaceman" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/linearLayout7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:background="@drawable/radius_gray"
                        android:gravity="center"
                        android:text="@string/result_text1"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_marginEnd="10dp"
                        android:id="@+id/textView11"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:background="@drawable/radius_gray"
                        android:gravity="center"
                        android:text="@string/result_text2"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="110dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/radius_gray"
                        android:gravity="center"
                        android:text="@string/result_text3"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="0/15"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/textView"
                        app:layout_constraintStart_toStartOf="@+id/textView"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="0/15"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/textView11"
                        app:layout_constraintStart_toStartOf="@+id/textView11"
                        app:layout_constraintTop_toBottomOf="@+id/textView11" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="88%"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/textView7"
                        app:layout_constraintStart_toStartOf="@+id/textView7"
                        app:layout_constraintTop_toBottomOf="@+id/textView7" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Good"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/radius_red"
                android:text="암기 종료"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.266" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>



</LinearLayout>